first blog post

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - About</title>
+    <title>Rational Exuberance - About</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Rational Exuberance</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post1.html">Featured Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -71,14 +71,14 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/manspace-color.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>About Me</h1>
+                        <h1>About Julia</h1>
                         <hr class="small">
-                        <span class="subheading">This is what I do.</span>
+                        <span class="subheading">Work hard. Dream big.</span>
                     </div>
                 </div>
             </div>
@@ -89,9 +89,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <!-- "hr" = line break -->
+                <p>Hi, I'm Julia.  I like to think about big problems and big ideas.</p>
+                <p>I'm a recent graduate of the University of Chicago.  I studied theoretical economics and political science, supplemented with more practical business and computer science courses on the side.  My previous research experience predominantly focuses on drivers of global clean tech development, but I'm generally interested in the use of technology to disrupt industries.</p>
+                <p><i>Rational Exuberance</i> is a platform where I can share my excitement about the latest developments in business, technology, energy, and policy.</p>
+                <p>When I'm not writing, I'm working as an energy investment banker at Credit Suisse (New York), drinking unhealthy amounts of coffee, or playing with dogs.</p>
             </div>
         </div>
     </div>
@@ -103,6 +105,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <!-- COMMENTING OUT TWITTER/FB/GITHUB BUTTONS
                     <ul class="list-inline text-center">
                         <li>
                             <a href="#">
@@ -128,8 +131,9 @@
                                 </span>
                             </a>
                         </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    </ul> 
+                    -->
+                    <p class="copyright text-muted">Copyright &copy; Julia Chang 2015</p>
                 </div>
             </div>
         </div>
