--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <ul class="list-inline text-center">
+                            <li>    <a href="http://www.linkedin.com/in/jchang92" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+
+                            </li>
+                        </ul>
                     <!-- 
                     <ul class="list-inline text-center">
                         <li>
