--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="post1.html">Featured Post</a>
                     </li>
                     <li>
-                        <a href="contact.php">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
