--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
+
                 <!-- Original Contact Form
                 <form name="sentMessage" role="form" id="contactForm" action="mail/contact_me2.php" method="post">
                     <div class="row control-group">
@@ -136,7 +137,7 @@
     </div>
     !-->
 
-                    <form class="form-horizontal" role="form" method="post" action="mail/contact_me2.php">
+                   <form class="form-horizontal" role="form" method="post" action="mail/contact_me2.php">
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
@@ -165,10 +166,15 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10 col-sm-offset-2">
-                            <?php echo $result; ?>    
+                            <?php echo $result; ?>  
                         </div>
                     </div>
                 </form> 
+            </div>
+        </div>
+    </div>   
+
+<!--end of example form -->          
 
     <hr>
 
