--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
     </div>
     !-->
 
-                   <form class="form-horizontal" role="form" method="post" action="mail/contact_me2.php">
+                   <form class="form-horizontal" role="form" method="post" action="contact_me2.php">
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
