--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
 
                 
-                <form name="sentMessage" role="form" id="contactForm" action="contact_me2.php" method="post">
+                <form name="sentMessage" role="form" id="contactForm" action="//formspree.io/jc@juliachang.me" method="post">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
@@ -106,7 +106,7 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required data-validation-required-message="Please enter your email address.">
+                            <input type="email" class="form-control" placeholder="Your email" id="email" name="_replyto" required data-validation-required-message="Please enter your email address.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -117,6 +117,7 @@
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
+                    <input type="hidden" name="_subject" value="New submission from contact form!"/>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Message</label>
