--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,9 @@
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
 
-                
-                <form name="sentMessage" role="form" id="contactForm" action="//formspree.io/jc@juliachang.me" method="post">
+                <!--
+                <form name="sentMessage" role="form" id="contactForm" action="//formspree.io/jc@juliachang.me" method="POST">-->
+                <form action="//formspree.io/jc@juliachang.me" method="POST">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
@@ -129,7 +130,7 @@
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-default" name="submit">Send</button>
+                            <input type = "submit" button type="submit" class="btn btn-default" name="submit" value="Send">Send</button>
                         </div>
                     </div>
                 </form>
