--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 
                 <!--
                 <form name="sentMessage" role="form" id="contactForm" action="//formspree.io/jc@juliachang.me" method="POST">-->
-                <form action="//formspree.io/jc@juliachang.me" method="POST">
+                <form action="//formspree.io/julia.c@uchicago.edu" method="POST">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
@@ -130,7 +130,7 @@
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12">
-                            <input type = "submit" button type="submit" class="btn btn-default" name="submit" value="Send">Send</button>
+                            <button type="submit" class="btn btn-default" name="submit" >Send</button>
                         </div>
                     </div>
                 </form>
