--- a/contact.html
+++ b/contact.html
@@ -111,13 +111,6 @@
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" name="phone" required data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
                     <input type="hidden" name="_subject" value="New submission from contact form!"/>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -130,7 +123,8 @@
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-default" name="submit" >Send</button>
+                            <!-- <button type="submit" class="btn btn-default" name="submit" >Send</button> -->
+                            <input class="btn btn-default" type="submit" value="Send" name="submit">
                         </div>
                     </div>
                 </form>
