--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                     <input type="hidden" name="_subject" value="New submission from contact form!"/>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Message</label>
+                            <label>Body</label>
                             <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
