--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                 <p>Hi, I'm Julia.  I like to think about big problems and big ideas.</p>
                 <p>I'm a recent graduate of the University of Chicago.  I studied theoretical economics and political science, supplemented with more practical business and computer science courses on the side.  My previous research experience predominantly focuses on drivers of global clean tech development, but I'm generally interested in the use of technology to disrupt industries.</p>
                 <p><i>Rational Exuberance</i> is a platform where I can share my excitement about the latest developments in business, technology, energy, and policy.</p>
-                <p>When I'm not writing, I'm working as an energy investment banker at Credit Suisse (New York), drinking unhealthy amounts of coffee, or playing with dogs.</p>
+                <p>When I'm not writing, I'm working as an energy investment banker at Credit Suisse (New York), backpacking around the world, drinking unhealthy amounts of coffee, or playing with dogs.</p>
                 
             </div>
         </div>
