--- a/about.html
+++ b/about.html
@@ -93,9 +93,9 @@
                 <img style='width:275px;height:367px;float:left;margin:25px 30px 0 20px;' src='img/me.jpg'>
                 
                 <p>Hi, I'm Julia.  I like to think about big problems and big ideas.</p>
-                <p>I'm a recent graduate of the University of Chicago.  I studied theoretical economics and political science, supplemented with more practical business and computer science courses on the side.  My previous research experience predominantly focuses on drivers of global clean tech development, but I'm generally interested in the use of technology to disrupt industries.</p>
-                <p><i>Rational Exuberance</i> is a platform where I can share my excitement about the latest developments in business, technology, energy, and policy.</p>
-                <p>When I'm not writing, I'm working as an energy investment banker at Credit Suisse (New York), backpacking around the world, drinking unhealthy amounts of coffee, or playing with dogs.</p>
+                <p>I'm a social entrepreneur, former investment banker, and graduate of the University of Chicago.  In school, I studied theoretical economics and political science, supplemented with more practical business and computer science courses on the side.  My previous work experience predominantly focuses on sustainable local and global development, but I'm generally interested in the use of technology to disrupt industries.</p>
+                <p><i>Rational Exuberance</i> is a platform where I can share my excitement about the latest developments in business, technology, infrastructure, and policy.</p>
+                <p>When I'm not writing, I'm working to modernize the 911 infrastructure in the US, backpacking around the world, drinking unhealthy amounts of coffee, or playing with dogs.</p>
                 
             </div>
         </div>
